# aiq

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
aiq/: __init__.py  llm.py  loader.py  pipeline.py
aiq/a10/: __init__.py  chunker.py
aiq/a11/: __init__.py  inferrer.py
aiq/a12/: __init__.py  normalizer.py
aiq/a13/: __init__.py  structurer.py
aiq/a14/: __init__.py  chunker.py
aiq/a22/: __init__.py  enricher.py
aiq/a30/: __init__.py  clarity.py
aiq/a31/: __init__.py  classifier.py
aiq/a32/: __init__.py  consistency.py
aiq/a41/: __init__.py  generator.py
aiq/a42/: __init__.py  retrieval.py
aiq/a43/: __init__.py  metrics.py
aiq/core/: __init__.py  cache.py  types.py
examples/: custom_rules.py  multi_document.py  neuroloft_kb.html  pipeline_detection.ipynb  pipeline_test_generation.ipynb  pipeline_testing.ipynb  pipeline_testing_llm.ipynb  quickstart.py  sample_document.html  test_aiq.ipynb  test_set.csv
results/: neuroloft_kb_eval.json  neuroloft_kb_eval_comparison.json  neuroloft_kb_eval_llm.json  neuroloft_kb_results.json
tests/: fixtures.py  test_modules.py  test_pipeline.py
