[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiq"
version = "0.1.0"
description = "AIQ: Improving Knowledge Base Quality to Optimize Retrieval in RAG Systems"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "AIQ Contributors"},
]
keywords = ["rag", "data-quality", "knowledge-base", "nlp", "retrieval-augmented-generation", "pii-detection", "content-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
docx = ["python-docx>=1.0.0"]
pdf = ["pymupdf>=1.23.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "python-docx>=1.0.0",
    "pymupdf>=1.23.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/neuroloft-ai/aiq"
Documentation = "https://github.com/neuroloft-ai/aiq#readme"
Repository = "https://github.com/neuroloft-ai/aiq"
Issues = "https://github.com/neuroloft-ai/aiq/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiq*"]
